# tmp_app_manager

./: CMakeLists.txt
src/: applistmodel.cpp  applistmodel.h  appmanager.cpp  appmanager.h  backend.cpp  backend.h  kheventfilter.h  lib.cpp  lib.h  main.cpp  main.qml
src/hooks_dll/: hook.cpp  hook.h
